crates/kirin-derive-chumsky/src/codegen/parser/snapshots/kirin_derive_chumsky__codegen__parser__generate__tests__keyword_enum_parser.snap
---
source: crates/kirin-derive-chumsky/src/codegen/parser/generate.rs
expression: generate_parser_code(input)
---
#[automatically_derived]
impl<'t> ::kirin::parsers::HasDialectParser<'t> for ArithOps
where
    SimpleType: ::kirin::parsers::HasParser<'t> + 't,
{
    type Output<__TypeOutput, __LanguageOutput>
        = ArithOpsAST<'t, __TypeOutput, __LanguageOutput>
    where
        __TypeOutput: Clone + PartialEq + 't,
        __LanguageOutput: Clone + PartialEq + 't;
    #[inline]
    fn namespaced_parser<I, __TypeOutput, __LanguageOutput>(
        language: ::kirin::parsers::RecursiveParser<'t, I, __LanguageOutput>,
        namespace: &[&'static str],
    ) -> ::kirin::parsers::BoxedParser<'t, I, Self::Output<__TypeOutput, __LanguageOutput>>
    where
        I: ::kirin::parsers::TokenInput<'t>,
        __TypeOutput: Clone + PartialEq + 't,
        __LanguageOutput: Clone + PartialEq + 't,
    {
        use kirin::parsers::chumsky::prelude::*;
        { use :: kirin :: parsers :: Token ; :: kirin :: parsers :: nameof_ssa () . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (Token :: Equal)) . then_ignore ({ let __keyword_parser : :: kirin :: parsers :: BoxedParser < 't , I , _ > = if namespace . is_empty () { :: kirin :: parsers :: chumsky :: prelude :: just (:: kirin :: parsers :: Token :: Identifier ("add")) . boxed () } else { let mut __parts : :: std :: vec :: Vec < & 'static str > = namespace . to_vec () ; __parts . push ("add") ; let mut __p : :: kirin :: parsers :: BoxedParser < 't , I , _ > = :: kirin :: parsers :: chumsky :: prelude :: just (:: kirin :: parsers :: Token :: Identifier (__parts [0])) . boxed () ; for & __part in & __parts [1 ..] { __p = __p . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (:: kirin :: parsers :: Token :: Dot)) . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (:: kirin :: parsers :: Token :: Identifier (__part))) . boxed () ; } __p } ; __keyword_parser }) . then (< Value as :: kirin :: parsers :: HasParser < 't >> :: parser ()) . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (Token :: Comma)) . then (< Value as :: kirin :: parsers :: HasParser < 't >> :: parser ()) . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (Token :: Arrow)) . then (:: kirin :: parsers :: typeof_ssa :: < _ , SimpleType > ()) . map (| (((result_name , lhs) , rhs) , result_type) | -> ArithOpsAST < 't , __TypeOutput , __LanguageOutput > { ArithOpsAST :: Add { result : :: kirin :: parsers :: SSAValue { name : :: kirin :: parsers :: Spanned { value : result_name . name , span : result_name . span } , ty : Some (result_type . ty . clone ()) , } , lhs : lhs , rhs : rhs } }) } . or ({ use :: kirin :: parsers :: Token ; :: kirin :: parsers :: nameof_ssa () . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (Token :: Equal)) . then_ignore ({ let __keyword_parser : :: kirin :: parsers :: BoxedParser < 't , I , _ > = if namespace . is_empty () { :: kirin :: parsers :: chumsky :: prelude :: just (:: kirin :: parsers :: Token :: Identifier ("sub")) . boxed () } else { let mut __parts : :: std :: vec :: Vec < & 'static str > = namespace . to_vec () ; __parts . push ("sub") ; let mut __p : :: kirin :: parsers :: BoxedParser < 't , I , _ > = :: kirin :: parsers :: chumsky :: prelude :: just (:: kirin :: parsers :: Token :: Identifier (__parts [0])) . boxed () ; for & __part in & __parts [1 ..] { __p = __p . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (:: kirin :: parsers :: Token :: Dot)) . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (:: kirin :: parsers :: Token :: Identifier (__part))) . boxed () ; } __p } ; __keyword_parser }) . then (< Value as :: kirin :: parsers :: HasParser < 't >> :: parser ()) . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (Token :: Comma)) . then (< Value as :: kirin :: parsers :: HasParser < 't >> :: parser ()) . then_ignore (:: kirin :: parsers :: chumsky :: prelude :: just (Token :: Arrow)) . then (:: kirin :: parsers :: typeof_ssa :: < _ , SimpleType > ()) . map (| (((result_name , lhs) , rhs) , result_type) | -> ArithOpsAST < 't , __TypeOutput , __LanguageOutput > { ArithOpsAST :: Sub { result : :: kirin :: parsers :: SSAValue { name : :: kirin :: parsers :: Spanned { value : result_name . name , span : result_name . span } , ty : Some (result_type . ty . clone ()) , } , lhs : lhs , rhs : rhs } }) }) . boxed ()
    }
}
#[automatically_derived]
impl<'t> ::kirin::parsers::HasParser<'t> for ArithOps
where
    SimpleType: ::kirin::parsers::HasParser<'t> + 't,
{
    type Output = ArithOpsASTSelf<'t, <SimpleType as ::kirin::parsers::HasParser<'t>>::Output>;
    fn parser<I>() -> ::kirin::parsers::BoxedParser<'t, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'t>,
    {
        use kirin::parsers::chumsky::prelude::*;
        ::kirin::parsers::chumsky::recursive::recursive(|language| {
            <ArithOps as ::kirin::parsers::HasDialectParser<'t>>::recursive_parser::<
                I,
                <SimpleType as ::kirin::parsers::HasParser<'t>>::Output,
                Self::Output,
            >(language)
            .map(|inner| ArithOpsASTSelf::new(inner))
        })
        .boxed()
    }
}
#[automatically_derived]
impl<'t> ::kirin::parsers::HasParserEmitIR<'t> for ArithOps
where
    ArithOps: ::kirin::ir::Dialect<Type = SimpleType>,
    SimpleType: ::kirin::parsers::HasParser<'t> + 't,
    <SimpleType as ::kirin::parsers::HasParser<'t>>::Output:
        ::kirin::parsers::EmitIR<ArithOps, Output = <ArithOps as ::kirin::ir::Dialect>::Type>,
{
    fn emit_parsed(
        output: &<Self as ::kirin::parsers::HasParser<'t>>::Output,
        ctx: &mut ::kirin::parsers::EmitContext<'_, Self>,
    ) -> ::core::result::Result<::kirin::ir::Statement, ::kirin::parsers::EmitError> {
        let dialect_variant = output.0.emit_with(ctx, &|stmt, ctx| {
            <ArithOps as ::kirin::parsers::HasParserEmitIR<'t>>::emit_parsed(stmt, ctx)
        })?;
        Ok(ctx.stage.statement().definition(dialect_variant).new())
    }
}
#[automatically_derived]
impl ::kirin::parsers::ParseEmit for ArithOps
where
    for<'t> Self: ::kirin::parsers::HasParserEmitIR<'t>,
{
    fn parse_and_emit(
        input: &str,
        ctx: &mut ::kirin::parsers::EmitContext<'_, Self>,
    ) -> ::core::result::Result<::kirin::ir::Statement, ::std::vec::Vec<::kirin::parsers::ParseError>>
    {
        let ast = ::kirin::parsers::parse_ast::<Self>(input)?;
        ::kirin::parsers::HasParserEmitIR::emit_parsed(&ast, ctx).map_err(|e| {
            ::std::vec![::kirin::parsers::ParseError {
                message: e.to_string(),
                span: ::kirin::parsers::chumsky::span::SimpleSpan::from(0..0),
            }]
        })
    }
}
#[automatically_derived]
impl<'tokens, Language, LanguageOutput>
    ::kirin::parsers::HasDialectEmitIR<'tokens, Language, LanguageOutput> for ArithOps
where
    Language: ::kirin::ir::Dialect<Type = SimpleType>,
    LanguageOutput: Clone + PartialEq + 'tokens,
    SimpleType: ::kirin::parsers::HasParser<'tokens> + 'tokens,
    <SimpleType as ::kirin::parsers::HasParser<'tokens>>::Output:
        ::kirin::parsers::EmitIR<Language, Output = <Language as ::kirin::ir::Dialect>::Type>,
{
    #[inline]
    fn emit_output<__TypeOutput, __EmitLanguageOutput>(
        output: &<Self as ::kirin::parsers::HasDialectParser<'tokens>>::Output<
            __TypeOutput,
            LanguageOutput,
        >,
        ctx: &mut ::kirin::parsers::EmitContext<'_, Language>,
        emit_language_output: &__EmitLanguageOutput,
    ) -> ::core::result::Result<Self, ::kirin::parsers::EmitError>
    where
        __TypeOutput: Clone + PartialEq + 'tokens,
        __EmitLanguageOutput: for<'ctx> Fn(
            &LanguageOutput,
            &mut ::kirin::parsers::EmitContext<'ctx, Language>,
        ) -> ::core::result::Result<
            ::kirin::ir::Statement,
            ::kirin::parsers::EmitError,
        >,
    {
        output.emit_with(ctx, emit_language_output)
    }
}
