crates/kirin-derive-chumsky/src/codegen/parser/snapshots/kirin_derive_chumsky__codegen__parser__generate__tests__keyword_struct_parser.snap
---
source: crates/kirin-derive-chumsky/src/codegen/parser/generate.rs
expression: generate_parser_code(input)
---
#[automatically_derived]
impl<'t> kirin_chumsky::HasDialectParser<'t> for Return
where
    SimpleType: kirin_chumsky::HasParser<'t> + 't,
{
    type Output<__TypeOutput, __LanguageOutput>
        = ReturnAST<'t, __TypeOutput, __LanguageOutput>
    where
        __TypeOutput: Clone + PartialEq + 't,
        __LanguageOutput: Clone + PartialEq + 't;
    #[inline]
    fn namespaced_parser<I, __TypeOutput, __LanguageOutput>(
        language: kirin_chumsky::RecursiveParser<'t, I, __LanguageOutput>,
        namespace: &[&'static str],
    ) -> kirin_chumsky::BoxedParser<'t, I, Self::Output<__TypeOutput, __LanguageOutput>>
    where
        I: kirin_chumsky::TokenInput<'t>,
        __TypeOutput: Clone + PartialEq + 't,
        __LanguageOutput: Clone + PartialEq + 't,
    {
        use kirin_chumsky::chumsky::prelude::*;
        {
            use kirin_chumsky::Token;
            {
                let __keyword_parser: kirin_chumsky::BoxedParser<'t, I, _> = if namespace.is_empty()
                {
                    kirin_chumsky::chumsky::prelude::just(kirin_chumsky::Token::Identifier("ret"))
                        .boxed()
                } else {
                    let mut __parts: ::std::vec::Vec<&'static str> = namespace.to_vec();
                    __parts.push("ret");
                    let mut __p: kirin_chumsky::BoxedParser<'t, I, _> =
                        kirin_chumsky::chumsky::prelude::just(kirin_chumsky::Token::Identifier(
                            __parts[0],
                        ))
                        .boxed();
                    for &__part in &__parts[1..] {
                        __p = __p
                            .then_ignore(kirin_chumsky::chumsky::prelude::just(
                                kirin_chumsky::Token::Dot,
                            ))
                            .then_ignore(kirin_chumsky::chumsky::prelude::just(
                                kirin_chumsky::Token::Identifier(__part),
                            ))
                            .boxed();
                    }
                    __p
                };
                __keyword_parser
            }
            .ignore_then(<Value as kirin_chumsky::HasParser<'t>>::parser())
            .map(|value| -> ReturnAST<'t, __TypeOutput, __LanguageOutput> {
                ReturnAST {
                    value: value,
                    _marker: ::core::marker::PhantomData::<
                        fn() -> (&'t (), __TypeOutput, __LanguageOutput),
                    >,
                }
            })
        }
        .boxed()
    }
}
#[automatically_derived]
impl<'t> kirin_chumsky::HasParser<'t> for Return
where
    SimpleType: kirin_chumsky::HasParser<'t> + 't,
{
    type Output = ReturnASTSelf<'t, <SimpleType as kirin_chumsky::HasParser<'t>>::Output>;
    fn parser<I>() -> kirin_chumsky::BoxedParser<'t, I, Self::Output>
    where
        I: kirin_chumsky::TokenInput<'t>,
    {
        use kirin_chumsky::chumsky::prelude::*;
        kirin_chumsky::chumsky::recursive::recursive(|language| {
            <Return as kirin_chumsky::HasDialectParser<'t>>::recursive_parser::<
                I,
                <SimpleType as kirin_chumsky::HasParser<'t>>::Output,
                Self::Output,
            >(language)
            .map(|inner| ReturnASTSelf::new(inner))
        })
        .boxed()
    }
}
#[automatically_derived]
impl<'t> kirin_chumsky::HasParserEmitIR<'t> for Return
where
    Return: ::kirin::ir::Dialect<Type = SimpleType>,
    SimpleType: kirin_chumsky::HasParser<'t> + 't,
    <SimpleType as kirin_chumsky::HasParser<'t>>::Output:
        kirin_chumsky::EmitIR<Return, Output = <Return as ::kirin::ir::Dialect>::Type>,
    <Return as ::kirin::ir::Dialect>::Type: ::kirin::ir::Placeholder,
{
    fn emit_parsed(
        output: &<Self as kirin_chumsky::HasParser<'t>>::Output,
        ctx: &mut kirin_chumsky::EmitContext<'_, Self>,
    ) -> ::core::result::Result<::kirin::ir::Statement, kirin_chumsky::EmitError> {
        let dialect_variant = output.0.emit_with(ctx, &|stmt, ctx| {
            <Return as kirin_chumsky::HasParserEmitIR<'t>>::emit_parsed(stmt, ctx)
        })?;
        Ok(ctx.stage.statement().definition(dialect_variant).new())
    }
}
#[automatically_derived]
impl kirin_chumsky::ParseEmit for Return
where
    for<'t> Self: kirin_chumsky::HasParserEmitIR<'t>,
{
    fn parse_and_emit(
        input: &str,
        ctx: &mut kirin_chumsky::EmitContext<'_, Self>,
    ) -> ::core::result::Result<::kirin::ir::Statement, ::std::vec::Vec<kirin_chumsky::ParseError>>
    {
        let ast = kirin_chumsky::parse_ast::<Self>(input)?;
        kirin_chumsky::HasParserEmitIR::emit_parsed(&ast, ctx).map_err(|e| {
            ::std::vec![kirin_chumsky::ParseError {
                message: e.to_string(),
                span: kirin_chumsky::chumsky::span::SimpleSpan::from(0..0),
            }]
        })
    }
}
#[automatically_derived]
impl<'tokens, Language, LanguageOutput>
    kirin_chumsky::HasDialectEmitIR<'tokens, Language, LanguageOutput> for Return
where
    Language: ::kirin::ir::Dialect<Type = SimpleType>,
    LanguageOutput: Clone + PartialEq + 'tokens,
    SimpleType: kirin_chumsky::HasParser<'tokens> + 'tokens,
    <SimpleType as kirin_chumsky::HasParser<'tokens>>::Output:
        kirin_chumsky::EmitIR<Language, Output = <Language as ::kirin::ir::Dialect>::Type>,
    SimpleType: ::kirin::ir::Placeholder,
{
    #[inline]
    fn emit_output<__TypeOutput, __EmitLanguageOutput>(
        output: &<Self as kirin_chumsky::HasDialectParser<'tokens>>::Output<
            __TypeOutput,
            LanguageOutput,
        >,
        ctx: &mut kirin_chumsky::EmitContext<'_, Language>,
        emit_language_output: &__EmitLanguageOutput,
    ) -> ::core::result::Result<Self, kirin_chumsky::EmitError>
    where
        __TypeOutput: Clone + PartialEq + 'tokens,
        __EmitLanguageOutput: for<'ctx> Fn(
            &LanguageOutput,
            &mut kirin_chumsky::EmitContext<'ctx, Language>,
        ) -> ::core::result::Result<
            ::kirin::ir::Statement,
            kirin_chumsky::EmitError,
        >,
    {
        output.emit_with(ctx, emit_language_output)
    }
}
