crates/kirin-derive-chumsky/src/codegen/parser/snapshots/kirin_derive_chumsky__codegen__parser__generate__tests__wrapper_namespace_parser.snap
---
source: crates/kirin-derive-chumsky/src/codegen/parser/generate.rs
expression: generate_parser_code(input)
---
#[automatically_derived]
impl<'t> ::kirin::parsers::HasDialectParser<'t> for MyLanguage
where
    SimpleType: ::kirin::parsers::HasParser<'t, Output = SimpleType> + 't,
    ArithOps: ::kirin::parsers::HasDialectParser<'t>,
    CfOps: ::kirin::parsers::HasDialectParser<'t>,
{
    type Output<__TypeOutput, __LanguageOutput>
        = MyLanguageAST<'t, __TypeOutput, __LanguageOutput>
    where
        __TypeOutput: Clone + PartialEq + 't,
        __LanguageOutput: Clone + PartialEq + 't;
    #[inline]
    fn namespaced_parser<I, __TypeOutput, __LanguageOutput>(
        language: ::kirin::parsers::RecursiveParser<'t, I, __LanguageOutput>,
        namespace: &[&'static str],
    ) -> ::kirin::parsers::BoxedParser<'t, I, Self::Output<__TypeOutput, __LanguageOutput>>
    where
        I: ::kirin::parsers::TokenInput<'t>,
        __TypeOutput: Clone + PartialEq + 't,
        __LanguageOutput: Clone + PartialEq + 't,
    {
        use kirin::parsers::chumsky::prelude::*;
        {
            let mut __ns: ::std::vec::Vec<&'static str> = namespace.to_vec();
            __ns.push("arith");
            <ArithOps as ::kirin::parsers::HasDialectParser<'t>>::namespaced_parser::<
                I,
                __TypeOutput,
                __LanguageOutput,
            >(language.clone(), &__ns)
            .map(
                |inner| -> MyLanguageAST<'t, __TypeOutput, __LanguageOutput> {
                    MyLanguageAST::Arith(inner)
                },
            )
        }
        .or(
            <CfOps as ::kirin::parsers::HasDialectParser<'t>>::namespaced_parser::<
                I,
                __TypeOutput,
                __LanguageOutput,
            >(language.clone(), namespace)
            .map(
                |inner| -> MyLanguageAST<'t, __TypeOutput, __LanguageOutput> {
                    MyLanguageAST::Cf(inner)
                },
            ),
        )
        .boxed()
    }
}
#[automatically_derived]
impl<'t> ::kirin::parsers::HasParser<'t> for MyLanguage
where
    SimpleType: ::kirin::parsers::HasParser<'t, Output = SimpleType> + 't,
    ArithOps: ::kirin::parsers::HasDialectParser<'t>,
    CfOps: ::kirin::parsers::HasDialectParser<'t>,
{
    type Output = MyLanguageASTSelf<'t, <SimpleType as ::kirin::parsers::HasParser<'t>>::Output>;
    fn parser<I>() -> ::kirin::parsers::BoxedParser<'t, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'t>,
    {
        use kirin::parsers::chumsky::prelude::*;
        ::kirin::parsers::chumsky::recursive::recursive(|language| {
            <MyLanguage as ::kirin::parsers::HasDialectParser<'t>>::recursive_parser::<
                I,
                <SimpleType as ::kirin::parsers::HasParser<'t>>::Output,
                Self::Output,
            >(language)
            .map(|inner| MyLanguageASTSelf::new(inner))
        })
        .boxed()
    }
}
#[automatically_derived]
impl<'t> ::kirin::parsers::HasParserEmitIR<'t> for MyLanguage
where
    MyLanguage: ::kirin::ir::Dialect<Type = SimpleType>,
    SimpleType: ::kirin::parsers::HasParser<'t, Output = SimpleType> + 't,
    <SimpleType as ::kirin::parsers::HasParser<'t>>::Output:
        ::kirin::parsers::EmitIR<MyLanguage, Output = <MyLanguage as ::kirin::ir::Dialect>::Type>,
    ArithOps: ::kirin::parsers::HasDialectEmitIR<
        't,
        MyLanguage,
        MyLanguageASTSelf<'t, <SimpleType as ::kirin::parsers::HasParser<'t>>::Output>,
    >,
    CfOps: ::kirin::parsers::HasDialectEmitIR<
        't,
        MyLanguage,
        MyLanguageASTSelf<'t, <SimpleType as ::kirin::parsers::HasParser<'t>>::Output>,
    >,
{
    fn emit_parsed(
        output: &<Self as ::kirin::parsers::HasParser<'t>>::Output,
        ctx: &mut ::kirin::parsers::EmitContext<'_, Self>,
    ) -> ::core::result::Result<::kirin::ir::Statement, ::kirin::parsers::EmitError> {
        let dialect_variant = output.0.emit_with(ctx, &|stmt, ctx| {
            <MyLanguage as ::kirin::parsers::HasParserEmitIR<'t>>::emit_parsed(stmt, ctx)
        })?;
        Ok(ctx.stage.statement().definition(dialect_variant).new())
    }
}
#[automatically_derived]
impl ::kirin::parsers::ParseEmit for MyLanguage
where
    for<'t> Self: ::kirin::parsers::HasParserEmitIR<'t>,
{
    fn parse_and_emit(
        input: &str,
        ctx: &mut ::kirin::parsers::EmitContext<'_, Self>,
    ) -> ::core::result::Result<::kirin::ir::Statement, ::kirin::parsers::ChumskyError> {
        let ast = ::kirin::parsers::parse_ast::<Self>(input)?;
        ::kirin::parsers::HasParserEmitIR::emit_parsed(&ast, ctx)
            .map_err(::kirin::parsers::ChumskyError::Emit)
    }
}
#[automatically_derived]
impl<'tokens, Language, LanguageOutput>
    ::kirin::parsers::HasDialectEmitIR<'tokens, Language, LanguageOutput> for MyLanguage
where
    Language: ::kirin::ir::Dialect<Type = SimpleType>,
    LanguageOutput: Clone + PartialEq + 'tokens,
    SimpleType: ::kirin::parsers::HasParser<'tokens, Output = SimpleType> + 'tokens,
    <SimpleType as ::kirin::parsers::HasParser<'tokens>>::Output:
        ::kirin::parsers::EmitIR<Language, Output = <Language as ::kirin::ir::Dialect>::Type>,
    ArithOps: ::kirin::parsers::HasDialectEmitIR<'tokens, Language, LanguageOutput>,
    CfOps: ::kirin::parsers::HasDialectEmitIR<'tokens, Language, LanguageOutput>,
{
    #[inline]
    fn emit_output<__TypeOutput, __EmitLanguageOutput>(
        output: &<Self as ::kirin::parsers::HasDialectParser<'tokens>>::Output<
            __TypeOutput,
            LanguageOutput,
        >,
        ctx: &mut ::kirin::parsers::EmitContext<'_, Language>,
        emit_language_output: &__EmitLanguageOutput,
    ) -> ::core::result::Result<Self, ::kirin::parsers::EmitError>
    where
        __TypeOutput: Clone + PartialEq + 'tokens,
        __EmitLanguageOutput: for<'ctx> Fn(
            &LanguageOutput,
            &mut ::kirin::parsers::EmitContext<'ctx, Language>,
        ) -> ::core::result::Result<
            ::kirin::ir::Statement,
            ::kirin::parsers::EmitError,
        >,
    {
        output.emit_with(ctx, emit_language_output)
    }
}
